--- a/templates/home.html
+++ b/templates/home.html
@@ -5,21 +5,21 @@
 
 
 {% for item in posts_with_mappings %}
-    {% with post=item.post follow_mapping=item.follow_mapping like_count=item.like_count is_liked=item.is_liked %}
+    {% with post=item.post follow_mapping=item.follow_mapping like_count=item.like_count is_liked=item.is_liked user_profile=item.user_profile%}
         <div class="container">
             <div class="row justify-content-center">
                 <div class="card bg-dark text-white mt-2 p-2" style="width: 400px;">
                     <div class="card-header">
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="{{ post.img.url }}" alt="Profile Picture" style="width: 30px; height: 30px;">
-                                <h6 class="mb-0">{{ post.username }}</h6>
+                                <img class="rounded-circle me-2" src="{{ user_profile.profile_pic.url }}" alt="Profile Picture" style="width: 30px; height: 30px;">
+                                <h6 class="mb-0"> <a class="nav-link" href="{% url 'profile' user_profile.username  %}">{{ post.username }}</a></h6>
                             </div>
-                            {% if request.user.is_authenticated %}
+                            {% if request.user.is_authenticated and user_profile.username != request.user.username %}
                                 {% if follow_mapping %}
-                                    <a class="text-white" href="{% url 'unfollow_user' post.id %}">Unfollow</a>
+                                    <a class="text-white" href="{% url 'unfollow_user' post.username %}">Unfollow</a>
                                 {% else %}
-                                    <a class="text-white" href="{% url 'follow_user' post.id %}">Follow</a>
+                                    <a class="text-white" href="{% url 'follow_user' post.username %}">Follow</a>
                                 {% endif %}
                             {% endif %}
                         </div>
