--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,34 +23,43 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-9 col-xl-7">
                 <div class="card">
-                    <div class="rounded-top bg-dark text-white d-flex flex-row align-items-center p-4">
-                        <div class="ms-4">
+                    <div class="rounded-top bg-dark text-white d-flex flex-column flex-md-row align-items-md-center p-4">
+                        <div class="ms-md-4 mb-3 mb-md-0">
                             <img src="{{ user_profile.profile_pic.url }}" alt="Profile Picture" class="img-fluid img-thumbnail profile-picture">
                         </div>
-                        <div class="ms-3">
+                        <div class="ms-md-3">
                             <h5>{{ user_profile.name }}</h5>
+                            {{ user_profile.username }}
                         </div>
-                        {% if user.is_authenticated and request.user.username == user_profile.username %}
-                        <div class="ms-auto">
-                            <a href="{% url 'update_profile' %}" class="btn btn-outline-light">Edit Profile</a>
-                            <a href="{% url 'add_post' %}" class="btn btn-outline-light">Add Post</a>
-                        </div>
+                        {% if user.is_authenticated %}
+                            <div class="ms-auto mt-3 mt-md-0">
+                                {% if request.user.username == user_profile.username %}
+                                    <a href="{% url 'update_profile' %}" class="btn btn-outline-light me-2">Edit Profile</a>
+                                    <a href="{% url 'add_post' %}" class="btn btn-outline-light">Add Post</a>
+                                {% else %}
+                                    {% if is_following %}
+                                        <a class="btn btn-outline-light" href="{% url 'unfollow_user' user_profile.username %}">Unfollow</a>
+                                    {% else %}
+                                        <a class="btn btn-outline-light" href="{% url 'follow_user' user_profile.username %}">Follow</a>
+                                    {% endif %}
+                                {% endif %}
+                            </div>
                         {% endif %}
-
                     </div>
+                    
                     <div class="card-body form-control">
                         <div class="row text-center text-black">
                             <div class="col">
                                 <h3>{{ posts|length }}</h3>
-                                <p class=""><strong><a href="{% url 'allpost' %}" class=" btn btn-outline-light">Posts</a></strong></p>
+                                <p class=""><strong><a href="{% url 'allpost'  user_profile.id %}" class=" btn btn-outline-light">Posts</a></strong></p>
                             </div>
                             <div class="col">
                                 <h3>{{ follow_user|length }}</h3>
-                                <p class=""><strong><a href="{% url 'following' %}" class="btn btn-outline-light">Following</a></strong></p>
+                                <p class=""><strong><a href="{% url 'following'  user_profile.id  %}" class="btn btn-outline-light">Following</a></strong></p>
                             </div>
                             <div class="col">
                                 <h3>{{ followed_user|length }}</h3>
-                                <p class=""><strong><a href="{% url 'followers' %}" class="btn btn-outline-light">Followers</a></strong></p>
+                                <p class=""><strong><a href="{% url 'followers'  user_profile.id %}" class="btn btn-outline-light">Followers</a></strong></p>
                             </div>
                         </div>
                         <hr>
@@ -58,22 +67,34 @@
                         <div >
                             <p class="font-italic mx-2">{{ user_profile.about }}</p>
                         </div>
-                        <div class="mt-4 ">
-                            <h3 class="text-black"><a href="{% url 'allpost' %}" class=" text-black">Recent Posts</a></h3>
-                            {% for post in posts %}
-                                {% if forloop.counter0|divisibleby:2 %}
-                                <div class="row g-3">
-                                {% endif %}
-                                {% if post.img %}
-                                    <div class="col-md-6 mb-2">
-                                        <img src="{{ post.img.url }}" alt="Image {{ forloop.counter }}" class="w-100 rounded-3 post-image" style="width: 100%; height: 80%;">
-                                    </div>
-                                {% endif %}
-                                {% if forloop.counter|divisibleby:2 or forloop.last %}
-                                </div>
-                                {% endif %}
-                            {% endfor %}
+                        <div class="mt-4">
+                            <h3 class="text-black"><a href="{% url 'allpost' user_profile.id %}" class="text-black">Recent Posts</a></h3>
+                            <div class="position-relative">
+                                {% for post in posts %}
+                                    {% if forloop.counter0|divisibleby:2 %}
+                                        <div class="row g-3">
+                                    {% endif %}
+                                    {% if post.img %}
+                                        <div class="col-md-6 mb-2 position-relative">
+                                            <img src="{{ post.img.url }}" alt="Image {{ forloop.counter }}" class="w-100 rounded-3 post-image" style="width: 100%; height: 80%;">
+                                            {% if request.user.username == user_profile.username %}
+                                                <div class="position-absolute top-0 end-0">
+                                                    <a href="{% url 'update_post' post.id %}" class="btn btn-sm btn-outline-light">Edit</a>
+                                                    <form action="{% url 'delete_post' post.id %}" method="post" class="d-inline">
+                                                        {% csrf_token %}
+                                                        <input type="submit" value="Delete" class="btn btn-danger btn-sm my-1">
+                                                    </form>
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                    {% endif %}
+                                    {% if forloop.counter|divisibleby:2 or forloop.last %}
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
