--- a/templates/updatepost.html
+++ b/templates/updatepost.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="well well-sm">
-                <form class="form-horizontal bg-dark p-3" method="POST">
+                <form class="form-horizontal bg-dark p-3" method="POST" enctype="multipart/form-data">
                     {% csrf_token %} {{ form.as_p }}
                     <button type="submit" class="btn btn-primary">Update</button>
                 </form>
