--- a/templates/allpost.html
+++ b/templates/allpost.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}{%load static%}
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4">Recent Photos</h2>
+    <h2 class="mb-4">Recent Posts</h2>
     <div class="row">
         {% for post in posts %}
             {% if forloop.counter0|divisibleby:2 %}
             <div class="row g-3">
             {% endif %}
+            {% if post.video %}
+            <div class="col-md-6 mb-2">
+                <video id="video{{ forloop.counter }}" src="{{ post.video.url }}" style="width: 100%; height: 100%;" controls></video>
+            </div>
+        {% endif %}
             {% if post.img %}
                 <div class="col-md-6 mb-2">
+                   
                     <img src="{{ post.img.url }}" alt="Image {{ forloop.counter }}" class="w-100 rounded-3 post-image" style="width: 100%; height: 80%;">
                 </div>
             {% endif %}
