--- a/templates/allpost.html
+++ b/templates/allpost.html
@@ -9,13 +9,13 @@
             {% endif %}
             {% if post.video %}
             <div class="col-md-6 mb-2">
-                <video id="video{{ forloop.counter }}" src="{{ post.video.url }}" style="width: 100%; height: 100%;" controls></video>
+                <video id="video{{ forloop.counter }}" src="{{ post.video.url }}"  class="w-100 rounded-3 post-image" style="width: 100%; height: 100%;" controls></video>
             </div>
         {% endif %}
             {% if post.img %}
                 <div class="col-md-6 mb-2">
                    
-                    <img src="{{ post.img.url }}" alt="Image {{ forloop.counter }}" class="w-100 rounded-3 post-image" style="width: 100%; height: 80%;">
+                    <img src="{{ post.img.url }}" alt="Image {{ forloop.counter }}" class="w-100 rounded-3 post-image" style="width: 100%; height: 100%;">
                 </div>
             {% endif %}
             {% if forloop.counter|divisibleby:2 or forloop.last %}
