--- a/templates/profile.html
+++ b/templates/profile.html
@@ -76,7 +76,7 @@
                                     {% endif %}
                                     {% if post.video %}
                                         <div class="col-md-6 mb-2 position-relative">
-                                            <video id="video{{ forloop.counter }}" src="{{ post.video.url }}" style="width: 100%; height: 100%;" controls></video>
+                                            <video id="video{{ forloop.counter }}" src="{{ post.video.url }}" class="w-100 rounded-3 post-image" style="width: 100%; height: 100%;" controls></video>
                                             {% if request.user.username == user_profile.username %}
                                                 <div class="position-absolute top-0 end-0">
                                                     <a href="{% url 'update_post' post.id %}" class="btn btn-sm bg-dark btn-outline-light">Edit</a>
@@ -90,7 +90,7 @@
                                     {% endif %}
                                     {% if post.img %}
                                         <div class="col-md-6 mb-2 position-relative">
-                                            <img src="{{ post.img.url }}" alt="Image {{ forloop.counter }}" class="w-100 rounded-3 post-image" style="width: 100%; height: 80%;">
+                                            <img src="{{ post.img.url }}" alt="Image {{ forloop.counter }}"   class="w-100 rounded-3 post-image" style="width: 100%; height: 100%;"">
                                             {% if request.user.username == user_profile.username %}
                                                 <div class="position-absolute top-0 end-0">
                                                     <a href="{% url 'update_post' post.id %}" class="btn btn-sm bg-dark btn-outline-light">Edit</a>
