--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
-<div class="col-sm-12 ">
-    <h3 class="text-white my-5">Login</h3>
-    <div class="row">
+<div class="col-sm-12  ">
+    <div class="row justify-content-center align-items-center">
         <div class="col-md-6 col-md-offset-3">
             <div class="well well-sm">
+                <h3 class="text-white my-5">Login</h3>
                 {%if error%}
                 <h4 class="text-center alert alert-danger">
                     {{error}}
