--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 <div class="col-sm-12">
-    <h3 class="text-white my-5">Sign Up</h3>
-    <div class="row">
+    <div class="row justify-content-center align-items-center">
         <div class="col-md-6 col-md-offset-3">
+            <h3 class="text-white my-5">Sign Up</h3>
             <div class="well well-sm">
                 {%if error%}
                 <h4 class="text-center alert alert-danger">
